2024-09-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptex-base.ch, ptex_version.h: Version p4.1.2.

2024-09-21  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptex-base.ch, uptex-m.ch:
	Fix a bug in initialization of inhibit_xsp/kinsoku tables
	(Bug introduced on commit 2022-12-12 r65248).

2024-09-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptex-base.ch: Use constants enc_jis and enc_ucs.
	* am/uptex.am: Tweak.

2024-05-18  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Enable to get character codes
	from control symbols by using backquote "`".
	* tests/ctlsym_num.tex: Add a test file.
	https://github.com/texjporg/tex-jp-build/issues/167

2024-05-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch: Fix unmatched begin-end grouping
	from Yukimasa Morimi san:
	https://github.com/texjporg/tex-jp-build/issues/46

2024-05-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch: Revert some patches.

2024-04-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch, kanji.{c,h}, updvitype.ch, uptex.defines:
	Support new encoding of upTeX for combining characters
	with multiple codepoints.
	Trial of Unicode Latin characters (experimental).
	New kcatcodes (latin_ucs(14), modifier(20)) are added.
	* {uppltotf,uptftopl,updvitype}.ch: Version p240427.
	Support upTeX new encoding for combining characters.
	* newjfm.test, updvitype.test, tests/kcat.tex, tests/upkcat.txt,
	tests/uptex5.{tex,dvi}, tests/uptex5a.typ,
	tests/testnewu{,8}.{pl,tfm}, am/uptex.am: Update tests.
	* uptex-m.ch, upbibtex.ch, uptex_version.h:
	upTeX version u1.35.
	https://github.com/texjporg/tex-jp-build/issues/46
	* COPYRIGHT: copyright year.

2024-04-14  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {,u}ptriptest.test:
	Filter Web2C year/dev in banner.

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptex_version.h, ptex-base.ch, zfmtcompress.test,
	am/uptex.am: Copy ptex source files from ../ptexdir